services done again

--- a/about.html
+++ b/about.html
@@ -52,28 +52,6 @@
 <body class="default home">
     
     <header class="row">
-        <div class="top_row row m0">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 tagLine">
-                        <i class="fa fa-smile-o"></i> best digital marketing theme forever!
-                    </div>
-                    <div class="col-sm-6">
-                        <ul class="nav navbar-right">
-                            <li><a href="#"><img src="images/icons/top-bar/user.png" alt="">login / register</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="images/icons/top-bar/globe.png" alt="">language</a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">en</a></li>
-                                    <li><a href="#">bn</a></li>
-                                    <li><a href="#">ar</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div> <!--Top Row-->
         <div class="logo_row row m0">
             <div class="container">
                 <div class="row">
@@ -163,11 +141,6 @@
     <section class="row pageCover">
         <div class="container p0">
             <h3 class="fleft">about us</h3>
-            <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pages</a></li>
-                <li class="active">about</li>
-            </ol>
         </div>
     </section>
     
@@ -176,13 +149,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2>We Offer a Full Range of Digital <br class="hidden-xs">Marketing Services!</h2>
-                        <p>Consect adipo sci velit, sed quia non numquam eius modi temora incidlabore etum dolore tha magnam aliquam quaerat voluptatem. </p>
+                        <h2>We Love Doing What We Do!</h2>
+                        <p style="font-size:15px;">It's a pre-requisite for joining our team. And while that means we're full of passionate people – from geeks to creatives to process masters – that passion is guided. Hard work and incredible challenges aren't a chore, but exciting. Everyone is focussed on doing a brilliant job every time. Oh, and we have loads of fun along the way. </p>
                         <ul class="nav">
-                            <li><img src="images/icons/about/4.png" alt="">We deliver Top Rankings.</li>
-                            <li><img src="images/icons/about/5.png" alt="">High customer retention rate.</li>
-                            <li><img src="images/icons/about/6.png" alt="">We always return e-mails and calls within one business day.</li>
-                            <li><img src="images/icons/about/7.png" alt="">Afordable pricing offers.</li>
+                            <li><img src="images/icons/about/4.png" alt=""><b>Web applications should transform your business.</b> We're not just interested in making your current system better. We're interested in developing software that takes your entire organization to the next level. Custom software should provide truly transformative solutions.</li>
+
+                            <li><img src="images/icons/about/5.png" alt=""><b>Wherever you are is the perfect place to start.</b> Bring us your big ideas—no matter where you are in the creative process. We'll collaborate to refine your idea—and create an end product that delivers exceptional results.</li>
+
+                            <li><img src="images/icons/about/6.png" alt=""><b>Business understanding should drive development.</b> We don't write a line of code until we know your business as well as you do. And our process encourages your participation and feedback every step of the way—so you can be sure of the final product.</li>
+
+                            <li><img src="images/icons/about/7.png" alt=""><b>Great software is not about the programming.</b> It's about business needs and usability and market understanding and strategy and your bottom line. Most development houses don't take all those things into account. We do.</li>
+
+                            <li><img src="images/icons/about/7.png" alt=""><b>Innovation is NOT black magic.</b> Innovation is a natural result of a development process that draws feedback from users at every level of your company. We listen actively—and we don't build until we all share a complete picture of your organization's needs and goals.</li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
@@ -196,68 +174,7 @@
                 </div>
             </div>
         </div>
-        <div class="row m0 contentRow about_company">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <img src="images/about/2.jpg" alt="" class="img-responsive">
-                    </div>
-                    <div class="col-sm-6">
-                        <h2>About Our Company</h2>
-                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                            <div class="panel panel-default">
-                                <div class="panel-heading" role="tab" id="headingOne">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <span class="icon"><img src="images/icons/about/1.png" alt=""></span>
-                                            Awards &amp; Recognition
-                                            <span class="sign"></span>
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                                    <div class="panel-body">
-                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consect adipo sci velit, sed quia non numquam eius modi temora incidlabore etum dolore tha magnam aliquam quaerat voluptatem. Ut enim ad minima venia quius nostrum sak exercitationem ullam corporis suscipit. laboriosam, nisi ut aliquid ex ea commodi consequatur
-                                    </div>
-                                </div>
-                            </div> <!--Panel-->
-                            <div class="panel panel-default">
-                                <div class="panel-heading" role="tab" id="headingTwo">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            <span class="icon"><img src="images/icons/about/2.png" alt=""></span>
-                                            Our company History
-                                            <span class="sign"></span>
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                    <div class="panel-body">
-                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consect adipo sci velit, sed quia non numquam eius modi temora incidlabore etum dolore tha magnam aliquam quaerat voluptatem. Ut enim ad minima venia quius nostrum sak exercitationem ullam corporis suscipit. laboriosam, nisi ut aliquid ex ea commodi consequatur
-                                    </div>
-                                </div>
-                            </div> <!--Panel-->
-                            <div class="panel panel-default">
-                                <div class="panel-heading" role="tab" id="headingThree">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            <span class="icon"><img src="images/icons/about/1.png" alt=""></span>
-                                            seowave future plan
-                                            <span class="sign"></span>
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                                    <div class="panel-body">
-                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consect adipo sci velit, sed quia non numquam eius modi temora incidlabore etum dolore tha magnam aliquam quaerat voluptatem. Ut enim ad minima venia quius nostrum sak exercitationem ullam corporis suscipit. laboriosam, nisi ut aliquid ex ea commodi consequatur
-                                    </div>
-                                </div>
-                            </div> <!--Panel-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <div class="row m0 funfacts_ab">
             <div class="container">
                 <div class="row">
