--- a/services.html
+++ b/services.html
@@ -52,28 +52,7 @@
 <body class="default home">
     
     <header class="row">
-        <div class="top_row row m0">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 tagLine">
-                        <i class="fa fa-smile-o"></i> best digital marketing theme forever!
-                    </div>
-                    <div class="col-sm-6">
-                        <ul class="nav navbar-right">
-                            <li><a href="#"><img src="images/icons/top-bar/user.png" alt="">login / register</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="images/icons/top-bar/globe.png" alt="">language</a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">en</a></li>
-                                    <li><a href="#">bn</a></li>
-                                    <li><a href="#">ar</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div> <!--Top Row-->
+
         <div class="logo_row row m0">
             <div class="container">
                 <div class="row">
@@ -184,13 +163,13 @@ maximize the reputation, performance and positioning of our customers.</h5>
                         <div class="row service_box_inner">
                             <div class="row preview_box">
                                 <img src="images/icons/services/1.png" alt="">
-                                <h6>Seo Services</h6>
+                                <h6>SOFTWARE DEVELOPMENT</h6>
                             </div>
                             <div class="row hover_box">
                                 <div class="row m0 inner">
-                                    <h6>Seo Services</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
+                                    <h6>SOFTWARE DEVELOPMENT</h6>
+                                    <div class="about"> We build custom business software and help our customers launch new online ventures. Our software development services come with all the help and support you could need to ensure your custom software project is successful and delivers a return to the business. </div>
+                                    <a href="services-details-software.html" class="read_more">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -199,13 +178,13 @@ maximize the reputation, performance and positioning of our customers.</h5>
                         <div class="row service_box_inner">
                             <div class="row preview_box">
                                 <img src="images/icons/services/8.png" alt="">
-                                <h6>Pay Per Click</h6>
+                                <h6>WEB DEVELOMENT</h6>
                             </div>
                             <div class="row hover_box">
                                 <div class="row m0 inner">
-                                    <h6>Seo Services</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
+                                    <h6>WEB DEVELOMENT</h6>
+                                    <div class="about"> Whatever the device, whatever the browser, our expertise makes sure your site always works beautifully.</div>
+                                    <a href="services-details-web.html" class="read_more">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -214,13 +193,13 @@ maximize the reputation, performance and positioning of our customers.</h5>
                         <div class="row service_box_inner">
                             <div class="row preview_box">
                                 <img src="images/icons/services/3.png" alt="">
-                                <h6>Social Media</h6>
+                                <h6>MOBILE DEVELOPMENT</h6>
                             </div>
                             <div class="row hover_box">
                                 <div class="row m0 inner">
-                                    <h6>Seo Services</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
+                                    <h6>MOBILE DEVELOPMENT</h6>
+                                    <div class="about"> We’re not launching an app. We’re creating an experience, starting a business, following a dream.</div>
+                                    <a href="services-details-mobile.html" class="read_more">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -244,13 +223,13 @@ maximize the reputation, performance and positioning of our customers.</h5>
                         <div class="row service_box_inner">
                             <div class="row preview_box">
                                 <img src="images/icons/services/5.png" alt="">
-                                <h6>Email Marketing</h6>
+                                <h6>E-COMMERCE</h6>
                             </div>
                             <div class="row hover_box">
                                 <div class="row m0 inner">
-                                    <h6>Email Marketing</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
+                                    <h6>E-COMMERCE</h6>
+                                    <div class="about"> E-Commerce is more than what you sell. It’s the experience you deliver.</div>
+                                    <a href="services-details-ecommerce.html" class="read_more">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -259,13 +238,13 @@ maximize the reputation, performance and positioning of our customers.</h5>
                         <div class="row service_box_inner">
                             <div class="row preview_box">
                                 <img src="images/icons/services/6.png" alt="">
-                                <h6>Content Management</h6>
+                                <h6>WORDPRESS DEVELOPMENT</h6>
                             </div>
                             <div class="row hover_box">
                                 <div class="row m0 inner">
-                                    <h6>Content Management</h6>
+                                    <h6>WORDPRESS DEVELOPMENT</h6>
                                     <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
+                                    <a href="#" class="read_more">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -274,43 +253,13 @@ maximize the reputation, performance and positioning of our customers.</h5>
                         <div class="row service_box_inner">
                             <div class="row preview_box">
                                 <img src="images/icons/services/2.png" alt="">
-                                <h6>Web Analytics</h6>
+                                <h6>CONTENT MANAGEMENT & SUPPORT</h6>
                             </div>
                             <div class="row hover_box">
                                 <div class="row m0 inner">
-                                    <h6>Web Analytics</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 service_box">
-                        <div class="row service_box_inner">
-                            <div class="row preview_box">
-                                <img src="images/icons/services/7.png" alt="">
-                                <h6>Virtual Marketing</h6>
-                            </div>
-                            <div class="row hover_box">
-                                <div class="row m0 inner">
-                                    <h6>Virtual Marketing</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 service_box">
-                        <div class="row service_box_inner">
-                            <div class="row preview_box">
-                                <img src="images/icons/services/9.png" alt="">
-                                <h6>Web Optimization</h6>
-                            </div>
-                            <div class="row hover_box">
-                                <div class="row m0 inner">
-                                    <h6>Web Optimization</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
+                                    <h6>CONTENT MANAGEMENT & SUPPORT</h6>
+                                    <div class="about"> Content is central to the customer experience.</div>
+                                    <a href="services-details-cms.html" class="read_more">Read More</a>
                                 </div>
                             </div>
                         </div>
