--- a/index.html
+++ b/index.html
@@ -75,53 +75,28 @@
     <div class="container">
       <div class="row">
         <div class="search_form_area fright">
-          <form action="#" class="col-sm-6 search_form p0" method="get">
-            <div class="input-group">
-              <input type="search" class="form-control">
-              <span class="input-group-addon"><i class="fa fa-search"></i></span> </div>
-          </form>
-          <a href="#" class="col-sm-6 free_analysis"> <img src="images/icons/menu/free_analysis.png" alt=""> free seo analysis </a> </div>
-        <!--Search And Analysis-->
+          <a href="services.html" class="col-sm-6 free_analysis">
+            <img src="images/icons/menu/free_analysis.png" alt=""> Services
+          </a>
+        </div>
         <div class="fleft menu_area">
           <button class="btn btn-primary visible-xs" type="button" data-toggle="collapse" data-target="#mainMenu" aria-expanded="false" aria-controls="mainMenu"> <i class="glyphicon glyphicon-th-large"></i> Menu </button>
           <div class="collapse navbar-collapse" id="mainMenu">
             <ul class="nav navbar-nav">
-              <li class="active dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">home</a>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li class="dropdown"> <a href="services.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
                 <ul class="dropdown-menu">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="index2.html">Home 2</a></li>
+                  <li><a href="services-details-software.html">SOFTWARE DEVELOPMENT</a></li>
+                  <li><a href="services-details-web.html">WEB DEVELOMENT</a></li>
+                  <li><a href="services-details-mobile.html">MOBILE DEVELOPMENT</a></li>
+                  <li><a href="services-details-ecommerce.html">E-COMMERCE</a></li>
+                  <li><a href="#">WORDPRESS DEVELOPMENT</a></li>
+                  <li><a href="services-details-cms.html">CONTENT MANAGEMENT & SUPPORT</a></li>
                 </ul>
               </li>
-              <li><a href="about.html">about</a></li>
-              <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">services</a>
-                <ul class="dropdown-menu">
-                  <li><a href="services.html">services</a></li>
-                  <li><a href="services-details.html">services details</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">case studies</a>
-                <ul class="dropdown-menu">
-                  <li><a href="case-studies.html">case studies</a></li>
-                  <li><a href="case-studies-details.html">case study details</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">pages</a>
-                <ul class="dropdown-menu">
-                  <li><a href="pricing.html">pricing</a></li>
-                  <li> <a href="#">packages</a></li>
-                  <li><a href="packages.html">packages</a></li>
-                  <li><a href="package-details.html">package details</a></li>
-                  <li><a href="contact.html">contact</a></li>
-                  <li><a href="checkout.html">checkout</a></li>
-                  <li><a href="404.html">404</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">blog</a>
-                <ul class="dropdown-menu">
-                  <li><a href="blog.html">blog</a></li>
-                  <li><a href="single-post.html">single post</a></li>
-                </ul>
-              </li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -754,7 +729,6 @@
             <li><img src="images/icons/about/6.png" alt="">ONGOING SUPPORT.</li>
             <li> <p>Once your site is up and running beautifully, we won't just sit there admiring it. We'll run training sessions to make sure your staff are completely confident in 'driving' it (updating content for instance). We'll always be there if you have a question. And we'll come back with any other ideas we think could help you.</p> </li>
           </ul>
-          <div class="row m0"> <a href="#" class="learn_more borderred_link fleft"><span>Learn More</span></a> <a href="#mc_embed_signup" class="borderred_link fleft quote_btn"><span>get a quote</span></a> </div>
         </div>
         <div class="col-sm-6">
           <div class="owl-carousel offer_service_carousel">
@@ -865,7 +839,6 @@
             <li><img src="images/icons/app/2.png" alt="">Track your progress</li>
             <li><img src="images/icons/app/3.png" alt="">analyze your data</li>
           </ul>
-          <div class="row m0 download_links"> <a href="#"><img src="images/icons/app/4.png" alt=""></a> <a href="#"><img src="images/icons/app/5.png" alt=""></a> </div>
         </div>
       </div>
       <div class="col-sm-4 col-sm-offset-1">
@@ -899,19 +872,15 @@
         <!--Single widget-->
         <div class="col-sm-4 footer_widget">
           <div class="row m0">
-            <h4 class="title">Service Provided</h4>
+            <h4 class="title">Services</h4>
             <div class="row m0 body">
               <ul class="list-unstyled links">
-                <li class="fa fa-caret-right"><a href="#">Seo Services</a></li>
-                <li class="fa fa-caret-right"><a href="#">Pay per click</a></li>
-                <li class="fa fa-caret-right"><a href="#">Social Media</a></li>
-                <li class="fa fa-caret-right"><a href="#">Web Analysis</a></li>
-                <li class="fa fa-caret-right"><a href="#">Virtual Marketing</a></li>
-                <li class="fa fa-caret-right"><a href="#">Email Marketing</a></li>
-                <li class="fa fa-caret-right"><a href="#">Web Development</a></li>
-                <li class="fa fa-caret-right"><a href="#">Content Management</a></li>
-                <li class="fa fa-caret-right"><a href="#">Blog Management</a></li>
-              </ul>
+                <li class="fa fa-caret-right"><a href="services-details-software.html">Software Development</a></li>
+                <li class="fa fa-caret-right"><a href="services-details-web.html">Web Development</a></li>
+                <li class="fa fa-caret-right"><a href="services-details-mobile.html">Mobile Development</a></li>
+                <li class="fa fa-caret-right"><a href="services-details-ecommerce.html">E-commerce</a></li>
+                <li class="fa fa-caret-right"><a href="#">WordPress Development</a></li>
+                <li class="fa fa-caret-right"><a href="services-details-cms.html">Content Management & Support</a></li>
             </div>
           </div>
         </div>
