--- a/services.html
+++ b/services.html
@@ -71,72 +71,39 @@
                 </div>
             </div>
         </div> <!--Logo Row-->
-        <nav class="row menu_row m0">
-            <div class="container">
-                <div class="row">
-                    <div class="search_form_area fright">
-                        <form action="#" class="col-sm-6 search_form p0" method="get">
-                            <div class="input-group">
-                                <input type="search" class="form-control">
-                                <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                            </div>
-                        </form>
-                        <a href="#" class="col-sm-6 free_analysis">
-                            <img src="images/icons/menu/free_analysis.png" alt=""> free seo analysis
-                        </a>
-                    </div> <!--Search And Analysis-->
-                    <div class="fleft menu_area">
-                        <button class="btn btn-primary visible-xs" type="button" data-toggle="collapse" data-target="#mainMenu" aria-expanded="false" aria-controls="mainMenu">
-                            <i class="glyphicon glyphicon-th-large"></i> Menu
-                        </button>
-                        <div class="collapse navbar-collapse" id="mainMenu">
-                            <ul class="nav navbar-nav">
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">home</a>                                    
-                                    <ul class="dropdown-menu">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="index2.html">Home 2</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="about.html">about</a></li>
-                                <li class="dropdown active">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">services</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="services.html">services</a></li>
-                                        <li><a href="services-details.html">services details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">case studies</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="case-studies.html">case studies</a></li>
-                                        <li><a href="case-studies-details.html">case study details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">pages</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="pricing.html">pricing</a></li>
-                                        <li><a href="packages.html">packages</a></li>
-                                        <li><a href="package-details.html">package details</a></li>
-                                        <li><a href="contact.html">contact</a></li>
-                                        <li><a href="checkout.html">checkout</a></li>
-                                        <li><a href="404.html">404</a></li>
-                                    </ul>
-                                </li>                                
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">blog</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="blog.html">blog</a></li>
-                                        <li><a href="single-post.html">single post</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div> <!--Menu Area-->
-                </div>
+      <nav class="row menu_row m0">
+        <div class="container">
+          <div class="row">
+            <div class="search_form_area fright">
+              <a href="services.html" class="col-sm-6 free_analysis">
+                <img src="images/icons/menu/free_analysis.png" alt=""> Services
+              </a>
             </div>
-        </nav> <!--Menu Row-->
+            <div class="fleft menu_area">
+              <button class="btn btn-primary visible-xs" type="button" data-toggle="collapse" data-target="#mainMenu" aria-expanded="false" aria-controls="mainMenu"> <i class="glyphicon glyphicon-th-large"></i> Menu </button>
+              <div class="collapse navbar-collapse" id="mainMenu">
+                <ul class="nav navbar-nav">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li class="active" class="dropdown"> <a href="services.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="services-details-software.html">SOFTWARE DEVELOPMENT</a></li>
+                      <li><a href="services-details-web.html">WEB DEVELOMENT</a></li>
+                      <li><a href="services-details-mobile.html">MOBILE DEVELOPMENT</a></li>
+                      <li><a href="services-details-ecommerce.html">E-COMMERCE</a></li>
+                      <li><a href="#">WORDPRESS DEVELOPMENT</a></li>
+                      <li><a href="services-details-cms.html">CONTENT MANAGEMENT & SUPPORT</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="work.html">Work</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+            <!--Menu Area--> 
+          </div>
+        </div>
+      </nav>
     </header>
     
     <section class="row pageCover">
@@ -200,21 +167,6 @@ maximize the reputation, performance and positioning of our customers.</h5>
                                     <h6>MOBILE DEVELOPMENT</h6>
                                     <div class="about"> We’re not launching an app. We’re creating an experience, starting a business, following a dream.</div>
                                     <a href="services-details-mobile.html" class="read_more">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 service_box">
-                        <div class="row service_box_inner">
-                            <div class="row preview_box">
-                                <img src="images/icons/services/4.png" alt="">
-                                <h6>Web Development</h6>
-                            </div>
-                            <div class="row hover_box">
-                                <div class="row m0 inner">
-                                    <h6>Web Development</h6>
-                                    <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                                    <a href="services-details.html" class="read_more">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -309,18 +261,15 @@ maximize the reputation, performance and positioning of our customers.</h5>
                     </div> <!--Single widget-->
                     <div class="col-sm-4 footer_widget">
                         <div class="row m0">
-                            <h4 class="title">Service Provided</h4>
+                            <h4 class="title">Services</h4>
                             <div class="row m0 body">
                                 <ul class="list-unstyled links">
-                                    <li class="fa fa-caret-right"><a href="#">Seo Services</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Pay per click</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Social Media</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Web Analysis</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Virtual Marketing</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Email Marketing</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Web Development</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Content Management</a></li>
-                                    <li class="fa fa-caret-right"><a href="#">Blog Management</a></li>
+                                    <li class="fa fa-caret-right"><a href="services-details-software.html">Software Development</a></li>
+                                    <li class="fa fa-caret-right"><a href="services-details-web.html">Web Development</a></li>
+                                    <li class="fa fa-caret-right"><a href="services-details-mobile.html">Mobile Development</a></li>
+                                    <li class="fa fa-caret-right"><a href="services-details-ecommerce.html">E-commerce</a></li>
+                                    <li class="fa fa-caret-right"><a href="#">WordPress Development</a></li>
+                                    <li class="fa fa-caret-right"><a href="services-details-cms.html">Content Management & Support</a></li>
                                 </ul>
                             </div>
                         </div>
